<resources>
    <string name="app_name">MultiGame</string>
    <string name="splash_title">Splash</string>
    <string name="create_player_title">Bonjour !</string>
    <string name="create_player_name">Nom</string>
    <string name="create_player_firstname">Prénom</string>
    <string name="create_player_age">Age</string>
    <string name="create_player_localisation">Localisation</string>
    <string name="create_player_player">Joueur</string>
    <string name="create_player_validate">Valider</string>
    <string name="location_lat_lng">Lat : %.2f Lon : %.2f</string>
    <string name="display_player_title">Liste de joueurs</string>


    <string name="drag_n_drop">Drag n Drop</string>
    <string name="fast_tap">Fast tap</string>
    <string name="ipac_fragment">Ipac</string>
    <string name="settings">Parametres</string>
    <string name="swipe">Swipe</string>
    <string name="time_left">Temps restant : %d</string>
    <string name="score">Score : %d</string>
    <string name="tap_type">%s</string>
    <string name="start">Commencer !</string>
</resources>