<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_player_title"
            android:textColor="@color/purple_700"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/create_player_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:background="@color/purple_200" />

        <EditText
            android:id="@+id/create_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/square_corner"
            android:hint="@string/create_player_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/create_player_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/square_corner"
            android:hint="@string/create_player_firstname"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/create_player_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/square_corner"
            android:hint="@string/create_player_age"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/create_player_localisation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/square_corner"
                android:hint="@string/create_player_localisation"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <ImageView
                android:id="@+id/create_player_localisation_bt"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@android:drawable/ic_menu_compass" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_player_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/create_player_player"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_player_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/create_player_validate"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>