<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/game_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/type_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_type"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/current_score"
            android:layout_width="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </LinearLayout>
</layout>